Added college column in student table

--- a/ssis_app/templates/add_course.html
+++ b/ssis_app/templates/add_course.html
@@ -5,9 +5,9 @@
 <!-- NAVIGATION -->
 <nav>
     <ul>
-        <li><a href="{{ url_for('college.index') }}">COLLEGE</a></li>
-        <li class="current tab"><a href="{{ url_for('course.index') }}">COURSE</a></li>
-        <li><a href="{{ url_for('student.index') }}">STUDENT</a></li>
+        <li><a href="{{ url_for('college.college_list') }}">COLLEGE</a></li>
+        <li class="current tab"><a href="{{ url_for('course.course_list') }}">COURSE</a></li>
+        <li><a href="{{ url_for('student.student_list') }}">STUDENT</a></li>
     </ul>
 </nav>
 
