Added success and error messages

--- a/ssis_app/templates/course_list.html
+++ b/ssis_app/templates/course_list.html
@@ -22,7 +22,7 @@
 
         <input type="hidden" name="selectedField" id="selectedField">
         <div class="custom-dropdown search">
-            <div class="dropdown-select search" id="search-dropdown">FILTER</div>
+            <div class="dropdown-select search" id="search-dropdown">ALL</div>
             <div class="dropdown-options" id="search-options">
                 <div class="dropdown-option" data-value="CODE">CODE</div>
                 <div class="dropdown-option" data-value="NAME">NAME</div>
