--- a/ssis_app/templates/student_list.html
+++ b/ssis_app/templates/student_list.html
@@ -22,7 +22,7 @@
 
         <input type="hidden" name="selectedField" id="selectedField">
         <div class="custom-dropdown search">
-            <div class="dropdown-select search" id="search-dropdown">FILTER</div>
+            <div class="dropdown-select search" id="search-dropdown">ALL</div>
             <div class="dropdown-options" id="search-options">
                 <div class="dropdown-option" data-value="STUDENT ID">STUDENT ID</div>
                 <div class="dropdown-option" data-value="FIRST NAME">FIRST NAME</div>
@@ -30,6 +30,7 @@
                 <div class="dropdown-option" data-value="COURSE">COURSE</div>
                 <div class="dropdown-option" data-value="YEAR LEVEL">YEAR LEVEL</div>
                 <div class="dropdown-option" data-value="GENDER">GENDER</div>
+                <div class="dropdown-option" data-value="COLLEGE">COLLEGE</div>
             </div>
         </div>
     </form>
@@ -62,7 +63,7 @@
                 <td>{{ student[3] }}</td>
                 <td>{{ student[4] }}</td>
                 <td>{{ student[5] }}</td>
-                <td>{{ student[7] }}</td>
+                <td>{{ student[6] }}</td>
 
                 <td>
                     <!-- EDIT -->
