Modified the routes and functionality

--- a/ssis_app/templates/edit_student.html
+++ b/ssis_app/templates/edit_student.html
@@ -84,7 +84,7 @@
     </div>
 
     <div class="container">
-        <button class="btn btn2">UPDATE</button>
+        <button class="btn btn2" type="submit">UPDATE</button>
     </div>
 </form>
 
