--- a/ssis_app/templates/edit_course.html
+++ b/ssis_app/templates/edit_course.html
@@ -56,7 +56,7 @@
     </div>    
     
     <div class="container">
-        <button class="btn btn3">UPDATE</button>
+        <button class="btn btn3" type="submit">UPDATE</button>
     </div>
 </form>
 
