Added changes on the HTML file

--- a/ssis_app/templates/add_student.html
+++ b/ssis_app/templates/add_student.html
@@ -21,7 +21,7 @@
     <!-- STUDENT ID -->
     <div class="inputBox id">
         <input type="text" required="required" name="student_ID">
-        <span>ID NUMBER</span>
+        <span>ID NUMBER <em>(YYYY-NNNN)</em></span>
     </div>
 
     <!-- FIRST NAME -->
