--- a/ssis_app/templates/student_list.html
+++ b/ssis_app/templates/student_list.html
@@ -63,7 +63,7 @@
                 <td>{{ student[3] }}</td>
                 <td>{{ student[4] }}</td>
                 <td>{{ student[5] }}</td>
-                <td>{{ student[6] }}</td>
+                <td>{{ student[7] }} ({{ student[8] }})</td>
 
                 <td>
                     <!-- EDIT -->
